KRPC-209 kRPC: Implement backwards compatible backpressure